--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,12 @@ repositories {
 dependencies {
 	implementation('io.jsonwebtoken:jjwt:0.6.0')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+}
+
+test {
+	useJUnitPlatform()
 }
